--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "kimetsu-no-yaiba",
+    "name": "kny-theme",
     "displayName": "Kimetsu no Yaiba theme",
     "description": "un petit thème sur l'univers de kimetsu no yaiba créé par moi-même et uniquement moi-même",
-    "publisher": "pandawou",
+    "publisher": "kny-theme",
     "version": "0.0.1",
     "engines": {
         "vscode": "^1.67.0"
